--- a/Filtering/CMakeLists.txt
+++ b/Filtering/CMakeLists.txt
@@ -192,6 +192,7 @@ vtkRectilinearGrid.cxx
 vtkRectilinearGridSource.cxx
 vtkRectilinearGridToPolyDataFilter.cxx
 vtkReebGraph.cxx
+vtkReebGraphSimplificationMetric.cxx
 vtkScalarTree.cxx
 vtkSelectionAlgorithm.cxx
 vtkSelection.cxx
