--- a/GUISupport/Qt/CMakeLists.txt
+++ b/GUISupport/Qt/CMakeLists.txt
@@ -320,72 +320,73 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/VTKConfigQt.cmake.in
                ${VTK_BINARY_DIR}/VTKConfigQt.cmake @ONLY IMMEDIATE)
 
 # build plugin
+IF(BUILD_SHARED_LIBS)
+  SET ( PluginLibSrcs
+        Q4VTKWidgetPlugin.cxx
+        )
 
-SET ( PluginLibSrcs
-      Q4VTKWidgetPlugin.cxx
+  SET ( PluginMocHeaders
+        Q4VTKWidgetPlugin.h
+        )
+
+  ADD_DEFINITIONS(-DQT_PLUGIN)
+  INCLUDE_DIRECTORIES(${QT_QTDESIGNER_INCLUDE_DIR})
+  QT4_WRAP_CPP ( PluginMocSrcs ${PluginMocHeaders} )
+
+  # add QVTK plugin from sources
+  # stand-alone as it doesn't depend on QVTK library
+  ADD_LIBRARY ( QVTKWidgetPlugin
+    SHARED
+    ${PluginLibSrcs}
+    ${PluginMocSrcs}
+  )
+
+  SET_TARGET_PROPERTIES(QVTKWidgetPlugin PROPERTIES COMPILE_DEFINITIONS QT_NO_DEBUG)
+
+  # link with Qt libs
+  TARGET_LINK_LIBRARIES( QVTKWidgetPlugin
+    ${QT_QTGUI_LIBRARY}
+    ${QT_QTCORE_LIBRARY}
+  )
+
+  # install rules
+
+  # The VTK_INSTALL_QT_PLUGIN_DIR variable sets the location
+  # in which the Qt plugin will be installed.  It may or may not contain
+  # variable references to CMAKE_INSTALL_PREFIX and VTK_INSTALL_QT_DIR.
+  # The default is to install to VTK_INSTALL_QT_DIR under the installation
+  # prefix.  The default VTK_INSTALL_QT_DIR will allow the designer plugin
+  # path to be set to vtk-install-prefix/plugins to get the plugin.
+  IF(NOT VTK_INSTALL_QT_DIR)
+    SET(VTK_INSTALL_QT_DIR /plugins/designer)
+  ENDIF(NOT VTK_INSTALL_QT_DIR)
+
+  # If no runtime is to be installed then do not install the qt plugin.
+  IF(VTK_INSTALL_NO_RUNTIME)
+    SET(VTK_INSTALL_NO_QT_PLUGIN 1)
+  ENDIF(VTK_INSTALL_NO_RUNTIME)
+
+  IF(NOT VTK_INSTALL_NO_QT_PLUGIN)
+    # Set default plugin install directory.
+    SET(DOLLAR "$")
+    IF(DEFINED VTK_INSTALL_QT_PLUGIN_DIR)
+    ELSE(DEFINED VTK_INSTALL_QT_PLUGIN_DIR)
+      SET(VTK_INSTALL_QT_PLUGIN_DIR "${DOLLAR}{CMAKE_INSTALL_PREFIX}${DOLLAR}{VTK_INSTALL_QT_DIR}"
+        CACHE STRING "Directory in which the VTK Qt plugin is placed during installation.")
+      MARK_AS_ADVANCED(VTK_INSTALL_QT_PLUGIN_DIR)
+    ENDIF(DEFINED VTK_INSTALL_QT_PLUGIN_DIR)
+
+    # Configure the plugin install script.  This is used instead of
+    # INSTALL TARGETS to allow the plugin to be installed outside the
+    # main install prefix.  Attach the script as a post-install script.
+    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/PluginInstall.cmake.in
+                   ${CMAKE_CURRENT_BINARY_DIR}/PluginInstall.cmake
+                   @ONLY IMMEDIATE)
+    SET_TARGET_PROPERTIES(QVTK PROPERTIES POST_INSTALL_SCRIPT
+      ${CMAKE_CURRENT_BINARY_DIR}/PluginInstall.cmake
       )
-
-SET ( PluginMocHeaders
-      Q4VTKWidgetPlugin.h
-      )
-
-ADD_DEFINITIONS(-DQT_PLUGIN)
-INCLUDE_DIRECTORIES(${QT_QTDESIGNER_INCLUDE_DIR})
-QT4_WRAP_CPP ( PluginMocSrcs ${PluginMocHeaders} )
-
-# add QVTK plugin from sources
-# stand-alone as it doesn't depend on QVTK library
-ADD_LIBRARY ( QVTKWidgetPlugin
-  SHARED
-  ${PluginLibSrcs}
-  ${PluginMocSrcs}
-)
-
-SET_TARGET_PROPERTIES(QVTKWidgetPlugin PROPERTIES COMPILE_DEFINITIONS QT_NO_DEBUG)
-
-# link with Qt libs
-TARGET_LINK_LIBRARIES( QVTKWidgetPlugin
-  ${QT_QTGUI_LIBRARY}
-  ${QT_QTCORE_LIBRARY}
-)
-
-# install rules
-
-# The VTK_INSTALL_QT_PLUGIN_DIR variable sets the location
-# in which the Qt plugin will be installed.  It may or may not contain
-# variable references to CMAKE_INSTALL_PREFIX and VTK_INSTALL_QT_DIR.
-# The default is to install to VTK_INSTALL_QT_DIR under the installation
-# prefix.  The default VTK_INSTALL_QT_DIR will allow the designer plugin
-# path to be set to vtk-install-prefix/plugins to get the plugin.
-IF(NOT VTK_INSTALL_QT_DIR)
-  SET(VTK_INSTALL_QT_DIR /plugins/designer)
-ENDIF(NOT VTK_INSTALL_QT_DIR)
-
-# If no runtime is to be installed then do not install the qt plugin.
-IF(VTK_INSTALL_NO_RUNTIME)
-  SET(VTK_INSTALL_NO_QT_PLUGIN 1)
-ENDIF(VTK_INSTALL_NO_RUNTIME)
-
-IF(NOT VTK_INSTALL_NO_QT_PLUGIN)
-  # Set default plugin install directory.
-  SET(DOLLAR "$")
-  IF(DEFINED VTK_INSTALL_QT_PLUGIN_DIR)
-  ELSE(DEFINED VTK_INSTALL_QT_PLUGIN_DIR)
-    SET(VTK_INSTALL_QT_PLUGIN_DIR "${DOLLAR}{CMAKE_INSTALL_PREFIX}${DOLLAR}{VTK_INSTALL_QT_DIR}"
-      CACHE STRING "Directory in which the VTK Qt plugin is placed during installation.")
-    MARK_AS_ADVANCED(VTK_INSTALL_QT_PLUGIN_DIR)
-  ENDIF(DEFINED VTK_INSTALL_QT_PLUGIN_DIR)
-
-  # Configure the plugin install script.  This is used instead of
-  # INSTALL TARGETS to allow the plugin to be installed outside the
-  # main install prefix.  Attach the script as a post-install script.
-  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/PluginInstall.cmake.in
-                 ${CMAKE_CURRENT_BINARY_DIR}/PluginInstall.cmake
-                 @ONLY IMMEDIATE)
-  SET_TARGET_PROPERTIES(QVTK PROPERTIES POST_INSTALL_SCRIPT
-    ${CMAKE_CURRENT_BINARY_DIR}/PluginInstall.cmake
-    )
-ENDIF(NOT VTK_INSTALL_NO_QT_PLUGIN)
+  ENDIF(NOT VTK_INSTALL_NO_QT_PLUGIN)
+ENDIF(BUILD_SHARED_LIBS)
 
 IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
   INSTALL(FILES
