--- a/Common/Testing/Python/CMakeLists.txt
+++ b/Common/Testing/Python/CMakeLists.txt
@@ -7,6 +7,7 @@ IF (VTK_PYTHON_EXE)
       TestArrayArguments
       TestGhost
       TestMutable
+      TestSubClass
       TestWeakref
       TestNumpySupport
       TestTerminationCrash
