ENH: Ability to restrict MIP and MinIP to a masked region
Add ability to restric the MIP and MinIP projections to an optional
binary mask region.

--- a/VolumeRendering/CMakeLists.txt
+++ b/VolumeRendering/CMakeLists.txt
@@ -108,12 +108,14 @@ set(KIT_GLSL_SRCS
   vtkGPUVolumeRayCastMapper_HeaderFS
   vtkGPUVolumeRayCastMapper_MIPCroppingFS
   vtkGPUVolumeRayCastMapper_MIPFS
+  vtkGPUVolumeRayCastMapper_MIPBinaryMaskFS
   vtkGPUVolumeRayCastMapper_MIPFourDependentFS
   vtkGPUVolumeRayCastMapper_MIPFourDependentCroppingFS
   vtkGPUVolumeRayCastMapper_MIPFourDependentNoCroppingFS
   vtkGPUVolumeRayCastMapper_MIPNoCroppingFS
   vtkGPUVolumeRayCastMapper_MinIPCroppingFS
   vtkGPUVolumeRayCastMapper_MinIPFS
+  vtkGPUVolumeRayCastMapper_MinIPBinaryMaskFS
   vtkGPUVolumeRayCastMapper_MinIPFourDependentFS
   vtkGPUVolumeRayCastMapper_MinIPFourDependentCroppingFS
   vtkGPUVolumeRayCastMapper_MinIPFourDependentNoCroppingFS
