Improvements to building and installing Python/SIP bridge files.

--- a/GUISupport/Qt/CMakeLists.txt
+++ b/GUISupport/Qt/CMakeLists.txt
@@ -207,14 +207,6 @@ if(VTK_WRAP_PYTHON_SIP)
   ENDIF(WIN32 AND NOT CYGWIN)
 
 
-  IF(NOT VTK_INSTALL_NO_LIBRARIES)
-    INSTALL(TARGETS vtkQtPython vtkQtPythonD
-      RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
-      LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
-      ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
-  ENDIF(NOT VTK_INSTALL_NO_LIBRARIES)
-
-
   #### wrap QObject derived classes with SIP
   # list .sip files here for wrapping
   set(SIP_FILES
@@ -302,11 +294,20 @@ if(VTK_WRAP_PYTHON_SIP)
     SET_TARGET_PROPERTIES(${SIP_MODULE} PROPERTIES SUFFIX ".pyd")
   ENDIF(WIN32 AND NOT CYGWIN)
 
+
+  SET_TARGET_PROPERTIES(vtkQtPython QVTKPython PROPERTIES SKIP_BUILD_RPATH 1)
+
   IF(NOT VTK_INSTALL_NO_LIBRARIES)
-    INSTALL(TARGETS QVTKPython
+    INSTALL(TARGETS vtkQtPythonD
       RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
       LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
       ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+    IF(VTK_INSTALL_PYTHON_USING_CMAKE)
+      INSTALL(TARGETS vtkQtPython QVTKPython
+        RUNTIME DESTINATION ${VTK_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+        LIBRARY DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+        ARCHIVE DESTINATION ${VTK_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+    ENDIF(VTK_INSTALL_PYTHON_USING_CMAKE)
   ENDIF(NOT VTK_INSTALL_NO_LIBRARIES)
 
   IF(BUILD_TESTING)
