--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -599,6 +599,17 @@ IF(VTK_USE_MPI)
 ELSE(VTK_USE_MPI)
   SET(VTK_PYTHON_USE_MPI 0)
 ENDIF(VTK_USE_MPI)
+IF(VTK_USE_QT AND VTK_WRAP_PYTHON_SIP)
+  SET(VTK_PYTHON_USE_QT 1)
+ELSE(VTK_USE_QT AND VTK_WRAP_PYTHON_SIP)
+  SET(VTK_PYTHON_USE_QT 0)
+ENDIF(VTK_USE_QT AND VTK_WRAP_PYTHON_SIP)
+IF(VTK_WRAP_PYTHON_SIP)
+  SET(VTK_PYTHON_USE_SIP 1)
+ELSE(VTK_WRAP_PYTHON_SIP)
+  SET(VTK_PYTHON_USE_SIP 0)
+ENDIF(VTK_WRAP_PYTHON_SIP)
+
 CONFIGURE_FILE(${VTK_SOURCE_DIR}/Wrapping/Python/setup.py.in
                ${VTK_BINARY_DIR}/Wrapping/Python/setup.py @ONLY IMMEDIATE)
 
