ENH: Added GetEdgeId to vtkGraph and added TestGraph

--- a/Filtering/Testing/Cxx/CMakeLists.txt
+++ b/Filtering/Testing/Cxx/CMakeLists.txt
@@ -18,12 +18,14 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   TestInterpolationDerivs.cxx
   TestImageIterator.cxx
   TestGenericCell.cxx
+  TestGraph.cxx
   TestHigherOrderCell.cxx  
   TestPointLocators.cxx
   TestPolyDataRemoveCell.cxx  
+  TestPolygon.cxx
   TestTreeBFSIterator.cxx
   TestTriangle.cxx
-  TestPolygon.cxx
+
   EXTRA_INCLUDE vtkTestDriver.h
 )
 
