--- a/Graphics/Testing/Cxx/CMakeLists.txt
+++ b/Graphics/Testing/Cxx/CMakeLists.txt
@@ -32,13 +32,19 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
     TestPolyDataPointSampler.cxx
     TestPolyhedron0.cxx
     TestPolyhedron1.cxx
-    TestReebGraph.cxx
     TestSelectEnclosedPoints.cxx
     TestTessellatedBoxSource.cxx
     TestTessellator.cxx
     TestUncertaintyTubeFilter.cxx
     TestDecimatePolylineFilter.cxx
     )
+
+  IF(VTK_USE_BOOST)
+    SET(MyTests
+      ${MyTests}
+      TestReebGraph.cxx
+      )
+  ENDIF(VTK_USE_BOOST)
 
   # Add Matlab Engine and Matlab Mex related tests.
   IF(VTK_USE_MATLAB_MEX)
