ENH: Added new vtkStringToImage classes.
These classes take an input string, and return a vtkImageData containing
the string with the specified text properties. FreeType and Qt support
rotation, but UTF8 support is only working in Qt right now.

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -59,6 +59,7 @@ SET( Kit_SRCS
   vtkExporter.cxx
   vtkFollower.cxx
   vtkFrameBufferObject.cxx
+  vtkFreeTypeStringToImage.cxx
   vtkFrustumCoverageCuller.cxx
   vtkGenericRenderWindowInteractor.cxx
   vtkGenericVertexAttributeMapping.cxx
@@ -164,6 +165,7 @@ SET( Kit_SRCS
   vtkShaderDeviceAdapter.cxx
   vtkShaderProgram.cxx
   vtkStandardPolyDataPainter.cxx
+  vtkStringToImage.cxx
   vtkSurfaceLICDefaultPainter.cxx
   vtkSurfaceLICPainter.cxx
   vtkTDxInteractorStyle.cxx
@@ -303,6 +305,7 @@ SET_SOURCE_FILES_PROPERTIES(
   vtkShader
   vtkShaderDeviceAdapter
   vtkShaderProgram
+  vtkStringToImage
   vtkTDxInteractorStyle
   vtkVisibilitySort.cxx
   ABSTRACT
@@ -422,6 +425,7 @@ IF(VTK_USE_QT)
     vtkQImageToImageSource.cxx
     vtkQtInitialization.cxx
     vtkQtLabelRenderStrategy.cxx
+    vtkQtStringToImage.cxx
     vtkQtTreeRingLabelMapper.cxx
     )
   # On the Mac, make the QT_LIBRARIES KIT_INTERFACE_LIBRARIES. This is a
