Added API to add observer to a vtkObject that is a class member function.
Added new API to vtkObject to add class member functions as callbacks to be
called when an event is invoked. Also added a test to test that adding/removing
such observers does not cause any issues.

--- a/Common/Testing/Cxx/CMakeLists.txt
+++ b/Common/Testing/Cxx/CMakeLists.txt
@@ -18,6 +18,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   TestMath.cxx
   TestMatrix3x3.cxx
   TestMinimalStandardRandomSequence.cxx
+  TestObservers.cxx
   TestPolynomialSolversUnivariate.cxx
   TestSmartPointer.cxx
   TestSortDataArray.cxx
