--- a/GUISupport/Qt/Testing/Cxx/CMakeLists.txt
+++ b/GUISupport/Qt/Testing/Cxx/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(MyTests
   TestQtInitialization.cxx
   TestQtSQLDatabase.cxx
   TestQtTableModelAdapter.cxx
-  TestQtTreeModelAdapter.cxx  
+  TestQtTreeModelAdapter.cxx
   )
 IF(VTK_USE_VIEWS)
   SET(MyTests
@@ -28,7 +28,7 @@ SET (TestsToRun ${Tests})
 REMOVE (TestsToRun ${KIT}CxxTests.cxx)
 
 #
-# Add all the executables 
+# Add all the executables
 FOREACH (test ${TestsToRun})
   GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
   IF (VTK_DATA_ROOT)
@@ -37,65 +37,60 @@ FOREACH (test ${TestsToRun})
         -T ${VTK_BINARY_DIR}/Testing/Temporary
         -V Baseline/${KIT}/${TName}.png)
   ELSE (VTK_DATA_ROOT)
-    ADD_TEST(QVTK-${TName} ${CXX_TEST_PATH}/${KIT}CxxTests ${TName}) 
+    ADD_TEST(QVTK-${TName} ${CXX_TEST_PATH}/${KIT}CxxTests ${TName})
   ENDIF (VTK_DATA_ROOT)
-ENDFOREACH (test) 
+ENDFOREACH (test)
 
 
 # testing of vtkQtChart
-SET(Tests
-  TestLineSeries.cxx
-  TestBarChart.cxx
-  TestBarSeriesColors.cxx
-  TestStackedChart.cxx
-  TestStackedChartAnimate.cxx
-  TestStatisticalBoxChart.cxx
-  PolylineItem.cxx
-  PointMarkerItems.cxx
-  Test1.cxx
-  TestChartWidget.cxx
-  )
-IF(VTK_USE_INFOVIS)
+if(VTK_USE_QTCHARTS)
   SET(Tests
-    ${Tests}
-  TestOrderStatisticsBoxChart.cxx
-)
-  
-ENDIF(VTK_USE_INFOVIS)
+    TestLineSeries.cxx
+    TestBarChart.cxx
+    TestBarSeriesColors.cxx
+    TestStackedChart.cxx
+    TestStackedChartAnimate.cxx
+    TestStatisticalBoxChart.cxx
+    PolylineItem.cxx
+    PointMarkerItems.cxx
+    Test1.cxx
+    TestChartWidget.cxx
+    )
+  IF(VTK_USE_INFOVIS)
+    SET(Tests ${Tests} TestOrderStatisticsBoxChart.cxx)
+  ENDIF(VTK_USE_INFOVIS)
 
-## Optionally add tests for vtkView subclasses
-IF(VTK_USE_VIEWS)
-  SET(Tests
-    ${Tests}
-  TestVtkBarChartView.cxx
-  TestVtkLineChartView.cxx
-  TestVtkStackedChartView.cxx
-  TestVtkStatisticalBoxChartView.cxx)
-ENDIF(VTK_USE_VIEWS)
+  ## Optionally add tests for vtkView subclasses
+  IF(VTK_USE_VIEWS)
+    SET(Tests ${Tests}
+      TestVtkBarChartView.cxx
+      TestVtkLineChartView.cxx
+      TestVtkStackedChartView.cxx
+      TestVtkStatisticalBoxChartView.cxx)
+  ENDIF(VTK_USE_VIEWS)
 
-INCLUDE_DIRECTORIES(${vtkQtChart_SOURCE_DIR} ${vtkQtChart_BINARY_DIR})
+  INCLUDE_DIRECTORIES(${vtkQtChart_SOURCE_DIR} ${vtkQtChart_BINARY_DIR})
 
-CREATE_TEST_SOURCELIST(TestSrcs QtChartCxxTests.cxx ${Tests} )
+  CREATE_TEST_SOURCELIST(TestSrcs QtChartCxxTests.cxx ${Tests} )
 
-ADD_EXECUTABLE(QtChartCxxTests ${TestSrcs} QTestApp.cxx)
-TARGET_LINK_LIBRARIES(QtChartCxxTests
-  vtkQtChart 
-  vtkFiltering 
-  vtkCommon)
+  ADD_EXECUTABLE(QtChartCxxTests ${TestSrcs} QTestApp.cxx)
+  TARGET_LINK_LIBRARIES(QtChartCxxTests
+    vtkQtChart
+    vtkFiltering
+    vtkCommon)
 
-IF(VTK_USE_INFOVIS)
-TARGET_LINK_LIBRARIES(QtChartCxxTests 
-  vtkInfovis
-)
-ENDIF(VTK_USE_INFOVIS)
+  IF(VTK_USE_INFOVIS)
+    TARGET_LINK_LIBRARIES(QtChartCxxTests vtkInfovis)
+  ENDIF(VTK_USE_INFOVIS)
 
-## Optionally link against vtkViews
-IF(VTK_USE_VIEWS)
-  TARGET_LINK_LIBRARIES(QtChartCxxTests QVTK vtkViews)
-ENDIF(VTK_USE_VIEWS)
+  ## Optionally link against vtkViews
+  IF(VTK_USE_VIEWS)
+    TARGET_LINK_LIBRARIES(QtChartCxxTests QVTK vtkViews)
+  ENDIF(VTK_USE_VIEWS)
 
-FOREACH(test ${Tests})
-  GET_FILENAME_COMPONENT(testname ${test} NAME_WE)
-  ADD_TEST(QtChart-${testname} ${CXX_TEST_PATH}/QtChartCxxTests ${testname} --exit)
-ENDFOREACH(test)
+  FOREACH(test ${Tests})
+    GET_FILENAME_COMPONENT(testname ${test} NAME_WE)
+    ADD_TEST(QtChart-${testname} ${CXX_TEST_PATH}/QtChartCxxTests ${testname} --exit)
+  ENDFOREACH(test)
 
+endif()
