ENH: Commented out some chart tests for now.
As all chart rendering is now done using FreeType, the Qt variants are
not currently applicable. They may be added back in the future.

Change-Id: Iad63b441344f4219933ae1fb3c79cc4c2247d992

--- a/Charts/Testing/Cxx/CMakeLists.txt
+++ b/Charts/Testing/Cxx/CMakeLists.txt
@@ -12,13 +12,13 @@ IF (VTK_USE_RENDERING AND VTK_USE_VIEWS)
   IF (VTK_DATA_ROOT)
     # add tests that require data
     SET(MyTests ${MyTests}
-      #    TestContextUnicode.cxx # Disabled until Freetype unicode works
+      #TestContextUnicode.cxx # Disabled until Freetype unicode works
       TestBarGraph.cxx
       TestContext.cxx
       TestContextImage.cxx
       TestDiagram.cxx
-      #      TestFreeTypeContextUnicode.cxx
-      TestFreeTypeRender.cxx
+      #TestFreeTypeContextUnicode.cxx
+      #TestFreeTypeRender.cxx
       TestLinePlot.cxx
       TestLinePlotInteraction.cxx
       TestMultipleChartRenderers.cxx
@@ -49,8 +49,8 @@ IF (VTK_USE_RENDERING AND VTK_USE_VIEWS)
     INCLUDE(${QT_USE_FILE})
     IF (VTK_DATA_ROOT)
       SET(MyTests ${MyTests}
-        TestQtDiagram.cxx
-        TestQtContextUnicode.cxx
+        #TestQtDiagram.cxx
+        #TestQtContextUnicode.cxx
         )
       SET(TestQtDiagramError 25)
       SET(TestQtContextUnicodeError 30)
