Taking consideration of icons and symbols present for size.
Also updated the cmake not to add test if data is not present.

--- a/Hybrid/Testing/Cxx/CMakeLists.txt
+++ b/Hybrid/Testing/Cxx/CMakeLists.txt
@@ -38,6 +38,7 @@ IF(NOT VTK_USE_DISPLAY)
     TestPolyDataSilhouette.cxx
     TestSpiderPlotActor.cxx
     X3DTest.cxx
+    TestLegendBoxActor.cxx
     )
 ENDIF(NOT VTK_USE_DISPLAY)
 
