ENH: Add file IO classes for BIC-MNI file formats.

--- a/Hybrid/CMakeLists.txt
+++ b/Hybrid/CMakeLists.txt
@@ -53,6 +53,10 @@ vtkLandmarkTransform.cxx
 vtkLegendBoxActor.cxx
 vtkLegendScaleActor.cxx
 vtkLSDynaReader.cxx
+vtkMNIObjectReader.cxx
+vtkMNIObjectWriter.cxx
+vtkMNITransformReader.cxx
+vtkMNITransformWriter.cxx
 vtkPCAAnalysisFilter.cxx
 vtkPieChartActor.cxx
 vtkPolyDataSilhouette.cxx
