ENH: Add stencils for simple shapes.

--- a/Imaging/CMakeLists.txt
+++ b/Imaging/CMakeLists.txt
@@ -109,7 +109,9 @@ vtkImageVariance3D.cxx
 vtkImageWrapPad.cxx
 vtkImageWeightedSum.cxx
 vtkImplicitFunctionToImageStencil.cxx
+vtkLassooStencilSource.cxx
 vtkPointLoad.cxx
+vtkROIStencilSource.cxx
 vtkRTAnalyticSource.cxx
 vtkSampleFunction.cxx
 vtkShepardMethod.cxx
