--- a/Imaging/Testing/Python/CMakeLists.txt
+++ b/Imaging/Testing/Python/CMakeLists.txt
@@ -56,6 +56,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         TestImageCanvas
         TestInPlaceFilter
         TestIslandRemoval2D
+        TestLassooStencil
         TestMapToRGBABlockStreaming
         TestMapToWindowLevelColors
         TestMapToWindowLevelColors2
@@ -67,6 +68,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         TestQuantizeTo16Colors 
         TestRange3D
         TestResample
+        TestROIStencil
         TestSeparableFilter
         TestShiftScale
         TestShiftScale2
