ENH: Don't include mpi.h or python.h from the top.
This should improve build times for developers who turn VTK_USE_MPI and VTK_WRAP_PYTHON On/Off by only including python/mpi's include directory where necessary instead of at the top which will cause a complete rebuild of everything when toggleing these.

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -12,6 +12,8 @@ SET(VTK_PYTHON_CORE_SRCS
   PyVTKSpecialObject.cxx
 )
 
+INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_PATH}")
+
 IF(VTK_WRAP_PYTHON_SIP)
   INCLUDE_DIRECTORIES(${SIP_INCLUDE_DIR})
 ENDIF(VTK_WRAP_PYTHON_SIP)
