--- a/Utilities/Cosmo/CMakeLists.txt
+++ b/Utilities/Cosmo/CMakeLists.txt
@@ -2,8 +2,10 @@
 project(Cosmo)
 
 #SET(Cosmo_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
+
 SET(Cosmo_LIBS)
 IF(VTK_USE_MPI)
+  INCLUDE_DIRECTORIES("${MPI_INCLUDE_PATH}")
   IF(MPI_EXTRA_LIBRARY)
     SET(Cosmo_LIBS ${MPI_LIBRARY} ${MPI_EXTRA_LIBRARY})
   ELSE(MPI_EXTRA_LIBRARY)
