--- a/Charts/Testing/Python/CMakeLists.txt
+++ b/Charts/Testing/Python/CMakeLists.txt
@@ -10,6 +10,9 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         TestBarGraph
         TestLinePlot
         TestStackedPlot
+        TestLinePlotColors
+        TestParallelCoordinatesColors
+        TestScatterPlotColors
       )
     ELSE()
       # Tests written in Python that do NOT require VTKData
