ENH: New filter vtkImageStencilToImage.
This filter converts vtkImageStencilData into vtkImageData.  It can
be used after vtkPolyDataToImageStencil to create a binary image of
the inside of a closed surface mesh.

--- a/Imaging/CMakeLists.txt
+++ b/Imaging/CMakeLists.txt
@@ -100,6 +100,7 @@ vtkImageSobel2D.cxx
 vtkImageSobel3D.cxx
 vtkImageSpatialAlgorithm.cxx
 vtkImageStencil.cxx
+vtkImageStencilToImage.cxx
 vtkImageStencilAlgorithm.cxx
 vtkImageStencilData.cxx
 vtkImageStencilSource.cxx
