--- a/Imaging/Testing/Tcl/CMakeLists.txt
+++ b/Imaging/Testing/Tcl/CMakeLists.txt
@@ -77,6 +77,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         TestSkeleton2D
         TestSobel2D
         TestSobel3D
+        TestStencilToImage
         TestStencilWithFunction
         TestStencilWithImage
         TestThreshold
