Initial version of the streaming stats filter

--- a/Infovis/CMakeLists.txt
+++ b/Infovis/CMakeLists.txt
@@ -98,6 +98,7 @@ vtkStackedTreeLayoutStrategy.cxx
 vtkStatisticsAlgorithm.cxx
 vtkStrahlerMetric.cxx
 vtkStreamGraph.cxx
+vtkStreamingStatistics.cxx
 vtkStringToCategory.cxx
 vtkStringToNumeric.cxx
 vtkTableToGraph.cxx
