--- a/Imaging/CMakeLists.txt
+++ b/Imaging/CMakeLists.txt
@@ -100,6 +100,7 @@ vtkImageSobel2D.cxx
 vtkImageSobel3D.cxx
 vtkImageSpatialAlgorithm.cxx
 vtkImageStencil.cxx
+vtkImageStencilIterator.cxx
 vtkImageStencilToImage.cxx
 vtkImageStencilAlgorithm.cxx
 vtkImageStencilData.cxx
@@ -129,7 +130,13 @@ vtkImageFourierFilter
 vtkImageIterateFilter
 vtkImagePadFilter
 vtkImageSpatialAlgorithm
+vtkImageStencilIterator
   ABSTRACT
+)
+
+SET_SOURCE_FILES_PROPERTIES(
+vtkImageStencilIterator
+  WRAP_EXCLUDE
 )
 
 IF(CMAKE_COMPILER_IS_GNUCXX AND VTK_GNUCXX_VERSION)
@@ -168,3 +175,11 @@ SET(KIT_JAVA_DEPS)
 # Include CMake code common to all kits.
 INCLUDE(${VTK_CMAKE_DIR}/KitCommonBlock.cmake)
 #-----------------------------------------------------------------------------
+
+IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
+  INSTALL(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkImageStencilIterator.txx
+    DESTINATION ${VTK_INSTALL_INCLUDE_DIR_CM24}
+    COMPONENT Development
+    )
+ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
