COMP: Fix building VTK with osmesa on OSX.

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -649,6 +649,11 @@ ELSE (WIN32)
     ENDIF(VTK_USE_CARBON)
     IF(VTK_USE_X  AND  OPENGL_gl_LIBRARY)
       SET(KitOpenGL_SRCS ${KitOpenGL_SRCS} vtkXOpenGLRenderWindow.cxx)
+    ELSE (VTK_USE_X  AND  OPENGL_gl_LIBRARY)
+      IF (VTK_OPENGL_HAS_OSMESA  AND  OSMESA_LIBRARY)
+        SET(KitOpenGL_SRCS ${KitOpenGL_SRCS} vtkOSOpenGLRenderWindow.cxx)
+        SET (KIT_LIBS ${KIT_LIBS} ${OSMESA_LIBRARY} )
+      ENDIF (VTK_OPENGL_HAS_OSMESA  AND  OSMESA_LIBRARY)
     ENDIF(VTK_USE_X  AND  OPENGL_gl_LIBRARY)
   ELSE (APPLE)
     IF (VTK_USE_X AND OPENGL_gl_LIBRARY)
