COMP: Properly link osmesa libraries when in use.

--- a/Parallel/CMakeLists.txt
+++ b/Parallel/CMakeLists.txt
@@ -11,6 +11,9 @@ IF(VTK_USE_RENDERING)
   SET(KIT_JAVA_LIBS vtkRenderingJava ${KIT_JAVA_LIBS})
   SET(KIT_INTERFACE_LIBRARIES vtkRendering ${KIT_INTERFACE_LIBRARIES})
   SET(KIT_LIBS ${KIT_LIBS} ${OPENGL_gl_LIBRARY})
+  IF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
+    SET (KIT_LIBS ${KIT_LIBS} ${OSMESA_LIBRARY} )
+  ENDIF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
 ELSE(VTK_USE_RENDERING)
   SET(KIT_PYTHON_LIBS ${KIT_PYTHON_LIBS} vtkGraphicsPythonD)
   SET(KIT_LIBS ${KIT_LIBS} vtkGraphics vtkImaging)
