--- a/Utilities/ftgl/CMakeLists.txt
+++ b/Utilities/ftgl/CMakeLists.txt
@@ -136,6 +136,10 @@ IF(OPENGL_gl_LIBRARY)
   SET (VTKFTGL_LIBS "${VTKFTGL_LIBS};${OPENGL_gl_LIBRARY}")
 ENDIF(OPENGL_gl_LIBRARY)
 
+IF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
+  SET (VTKFTGL_LIBS ${VTKFTGL_LIBS} ${OSMESA_LIBRARY} )
+ENDIF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
+
 #
 # We obviously need FreeType
 #
