--- a/Widgets/CMakeLists.txt
+++ b/Widgets/CMakeLists.txt
@@ -7,6 +7,10 @@ SET(KIT_JAVA_LIBS vtkRenderingJava vtkHybridJava)
 SET(KIT_INTERFACE_LIBRARIES vtkRendering vtkHybrid)
 SET(KIT_LIBS ${OPENGL_gl_LIBRARY})
 
+IF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
+  SET (KIT_LIBS ${KIT_LIBS} ${OSMESA_LIBRARY} )
+ENDIF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
+
 SET ( Kit_SRCS
 vtk3DWidget.cxx
 vtkAbstractWidget.cxx
