BUG: Fix bugs in vtkMNIObjectWriter, vtkMNITransformReader.
Fix the polyline output in vtkMNIObjectWriter, and fix a NAN
error (log of zero) in the vtkMNITransformReader.  Improve
test coverage.

--- a/Hybrid/Testing/Python/CMakeLists.txt
+++ b/Hybrid/Testing/Python/CMakeLists.txt
@@ -37,6 +37,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         #TestICPTransform  --complex arrays
         TestImageStencilWithPolydata
         TestMNIObjects
+        TestMNITransforms
         TestPCA
         TestProcrustes
         TestProjectedTerrainPath
