ENH: Add reader/writer for MNI tag point label files.
The MNI tag files were developed at the Montreal Neurological
Institute for storing anatomical tags with labels and other data.
These files are used together with MNI transform files, MNI object
files, and MINC image files.

--- a/Hybrid/CMakeLists.txt
+++ b/Hybrid/CMakeLists.txt
@@ -55,6 +55,8 @@ vtkLegendScaleActor.cxx
 vtkLSDynaReader.cxx
 vtkMNIObjectReader.cxx
 vtkMNIObjectWriter.cxx
+vtkMNITagPointReader.cxx
+vtkMNITagPointWriter.cxx
 vtkMNITransformReader.cxx
 vtkMNITransformWriter.cxx
 vtkPCAAnalysisFilter.cxx
