BUG: 11515. Merge update extent requests from downstream algorithms.
This commit fixes bug 11515.  Previously, if an algorithm output
had multiple consumers, and each requested a different update extent,
then the final requested update extent would be the one that was used.
So if one algorithm asked for (0,255,0,255,0,0) and another asked for
(0,127,0,127,0,0) then the extent would be set to (0,127,0,127,0,0),
and the algorithm that required (0,255,0,255,0,0) would segfault.

The fix was to merge all update extents in a new information key called
COMBINED_UPDATE_EXTENT.  The combined extent is reset to the empty
extent after each cycle, i.e. after REQUEST_DATA has completed.

Two parallel image algorithms, vtkMemoryLimitImageDataStreamer and
vtkPImageWriter, have to override this behavior because they call
PropagateUpdateExtent() multiple times with different extents while
they are computing the pipeline memory size.

Change-Id: I75599aaed24f39e8c938eb6dad24a287b281f86e

--- a/Imaging/Testing/Python/CMakeLists.txt
+++ b/Imaging/Testing/Python/CMakeLists.txt
@@ -9,6 +9,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         ContinuousClose2D
         IdealHighPass
         LaplacianEdgeEnhance
+        MultipleUpdateExtents
         #reconstructSurface -- scanf
         resampledTexture
         ResliceColorWrap
