--- a/Imaging/Testing/Tcl/CMakeLists.txt
+++ b/Imaging/Testing/Tcl/CMakeLists.txt
@@ -8,6 +8,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         ContinuousClose2D
         IdealHighPass
         LaplacianEdgeEnhance
+        MultipleUpdateExtents
         reconstructSurface
         resampledTexture
         ResliceColorWrap
