COMP: Added more missing include directory calls for Boost.

--- a/Infovis/CMakeLists.txt
+++ b/Infovis/CMakeLists.txt
@@ -139,6 +139,7 @@ vtkXMLTreeReader.cxx
 
 
 IF(VTK_USE_BOOST)
+  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
   IF( "${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}" LESS 1.36)
     IF( HAVE_CMAKE_SIZEOF_VOID_P AND CMAKE_SIZEOF_VOID_P EQUAL 8 )
       SET( BOOST_OLD_VERSION TRUE )
