--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -286,6 +286,10 @@ vtkStreamer
 ABSTRACT
 )
 
+IF(VTK_USE_BOOST)
+  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+ENDIF(VTK_USE_BOOST)
+
 # Add Matlab Engine and Matlab Mex related files.
 IF(VTK_USE_MATLAB_MEX)
   INCLUDE(${MATLAB_MEX_USE_FILE})
