--- a/TextAnalysis/CMakeLists.txt
+++ b/TextAnalysis/CMakeLists.txt
@@ -6,6 +6,8 @@ IF(NOT VTK_USE_BOOST)
   MESSAGE(SEND_ERROR "VTK_USE_TEXT_ANALYSIS requires VTK_USE_BOOST")
 ENDIF(NOT VTK_USE_BOOST)
 
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+
 SET(KIT TextAnalysis)
 SET(UKIT TEXT_ANALYSIS)
 
