--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -300,6 +300,7 @@ ABSTRACT
 )
 
 IF(VTK_USE_BOOST)
+  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
   SET(Kit_SRCS
     ${Kit_SRCS}
     vtkReebGraphToJoinSplitTreeFilter.cxx
