--- a/Examples/GUI/Qt/CMakeLists.txt
+++ b/Examples/GUI/Qt/CMakeLists.txt
@@ -1,9 +1,11 @@
 
 
-SUBDIRS(ImageViewer SimpleView Events)
+ADD_SUBDIRECTORY(ImageViewer)
+ADD_SUBDIRECTORY(SimpleView)
+ADD_SUBDIRECTORY(Events)
 
 IF(VTK_USE_QVTK_QTOPENGL)
-  SUBDIRS(GraphicsView)
+  ADD_SUBDIRECTORY(GraphicsView)
 ENDIF(VTK_USE_QVTK_QTOPENGL)
 
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/CTestCustom.ctest.in"
