--- a/Examples/GUI/Win32/vtkMFC/CMakeLists.txt
+++ b/Examples/GUI/Win32/vtkMFC/CMakeLists.txt
@@ -6,8 +6,6 @@ IF(NOT VTK_DIR)
 ENDIF(NOT VTK_DIR)
 INCLUDE(${VTK_USE_FILE})
 
-SUBDIRS(  
-  vtkMDI
-  vtkSDI
-  vtkDLG
-)
+ADD_SUBDIRECTORY(vtkMDI)
+ADD_SUBDIRECTORY(vtkSDI)
+ADD_SUBDIRECTORY(vtkDLG)
