--- a/GUISupport/CMakeLists.txt
+++ b/GUISupport/CMakeLists.txt
@@ -8,9 +8,9 @@ IF(WIN32)
 ENDIF(WIN32)
 
 IF(VTK_USE_QVTK)
-  SUBDIRS(Qt)
+  ADD_SUBDIRECTORY(Qt)
 ENDIF(VTK_USE_QVTK)
 
 IF(VTK_USE_MFC)
-  SUBDIRS(MFC)
+  ADD_SUBDIRECTORY(MFC)
 ENDIF(VTK_USE_MFC)
