--- a/GenericFiltering/Testing/CMakeLists.txt
+++ b/GenericFiltering/Testing/CMakeLists.txt
@@ -1,7 +1,7 @@
-SUBDIRS(Cxx)
+ADD_SUBDIRECTORY(Cxx)
 
 IF (VTK_WRAP_TCL)
-  SUBDIRS(Tcl)
+  ADD_SUBDIRECTORY(Tcl)
 ENDIF (VTK_WRAP_TCL)
 
 IF(PYTHON_EXECUTABLE)
