--- a/Utilities/TclTk/internals/CMakeLists.txt
+++ b/Utilities/TclTk/internals/CMakeLists.txt
@@ -3,7 +3,7 @@ IF(TK_INTERNAL_PATH)
   SET (TCL_TK_VERSION "${TCL_TK_MAJOR_VERSION}.${TCL_TK_MINOR_VERSION}")
   IF("${TK_INTERNAL_PATH}" MATCHES 
      "${CMAKE_CURRENT_SOURCE_DIR}/tk${TCL_TK_VERSION}")
-     SUBDIRS(tk${TCL_TK_VERSION})
+     ADD_SUBDIRECTORY(tk${TCL_TK_VERSION})
   ENDIF("${TK_INTERNAL_PATH}" MATCHES 
         "${CMAKE_CURRENT_SOURCE_DIR}/tk${TCL_TK_VERSION}")
 ENDIF(TK_INTERNAL_PATH)
