--- a/Hybrid/Testing/CMakeLists.txt
+++ b/Hybrid/Testing/CMakeLists.txt
@@ -1,13 +1,13 @@
 # Commented out to avoid problems with Borland dashboards
 # until new tests are added to Cxx/CMakeLists.txt.
-SUBDIRS(Cxx)
+ADD_SUBDIRECTORY(Cxx)
 
 IF (VTK_WRAP_TCL)
-  SUBDIRS(Tcl)
+  ADD_SUBDIRECTORY(Tcl)
 ENDIF (VTK_WRAP_TCL)
 
 IF (VTK_WRAP_PYTHON)
-  SUBDIRS(Python)
+  ADD_SUBDIRECTORY(Python)
 ENDIF (VTK_WRAP_PYTHON)
 
 IF(PYTHON_EXECUTABLE)
