--- a/IO/Testing/CMakeLists.txt
+++ b/IO/Testing/CMakeLists.txt
@@ -1,12 +1,12 @@
 IF (VTK_WRAP_TCL)
-  SUBDIRS(Tcl)
+  ADD_SUBDIRECTORY(Tcl)
 ENDIF (VTK_WRAP_TCL)
 
 IF (VTK_WRAP_PYTHON)
-  SUBDIRS(Python)
+  ADD_SUBDIRECTORY(Python)
 ENDIF (VTK_WRAP_PYTHON)
 
-SUBDIRS(Cxx)
+ADD_SUBDIRECTORY(Cxx)
 
 IF(PYTHON_EXECUTABLE)
   ADD_TEST(HeaderTesting-IO ${PYTHON_EXECUTABLE}
