--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Build kwsys
-SUBDIRS(kwsys)
+ADD_SUBDIRECTORY(kwsys)
 
 # Build third-party utilities.
 
@@ -33,30 +33,30 @@ SET( verdict_INSTALL_DOC_DIR ${VTK_INSTALL_DOC_DIR_CM24})
 SET( verdict_INSTALL_INCLUDE_DIR ${VTK_INSTALL_INCLUDE_DIR_CM24})
 SET( verdict_INSTALL_BIN_DIR ${VTK_INSTALL_BIN_DIR_CM24})
 SET( verdict_INSTALL_LIB_DIR ${VTK_INSTALL_LIB_DIR_CM24})
-SUBDIRS(verdict)
+ADD_SUBDIRECTORY(verdict)
 
-SUBDIRS(vtknetcdf)
+ADD_SUBDIRECTORY(vtknetcdf)
 IF(VTK_USE_METAIO)
-  SUBDIRS(vtkmetaio)
+  ADD_SUBDIRECTORY(vtkmetaio)
 ENDIF(VTK_USE_METAIO)
-SUBDIRS(vtksqlite)
+ADD_SUBDIRECTORY(vtksqlite)
 
 IF(VTK_HAS_EXODUS)
-  SUBDIRS(vtkexodus2)
+  ADD_SUBDIRECTORY(vtkexodus2)
 ENDIF(VTK_HAS_EXODUS)
 
-SUBDIRS(vtkalglib)
+ADD_SUBDIRECTORY(vtkalglib)
 
-SUBDIRS(Doxygen)
+ADD_SUBDIRECTORY(Doxygen)
 IF(VTK_INCLUDE_NEED_TCL)
-  SUBDIRS(TclTk)
+  ADD_SUBDIRECTORY(TclTk)
 ENDIF(VTK_INCLUDE_NEED_TCL)
 
-SUBDIRS(EncodeString)
+ADD_SUBDIRECTORY(EncodeString)
 
 IF(VTK_USE_PARALLEL)
   # vtkParallel uses source hashes during network handshakes.
-  SUBDIRS(HashSource)
+  ADD_SUBDIRECTORY(HashSource)
   
   # helper classes for vtkVPICReader
   VTK_THIRD_PARTY_SUBDIR(VPIC VPIC)
@@ -66,7 +66,7 @@ IF(VTK_USE_PARALLEL)
 ENDIF(VTK_USE_PARALLEL)
 
 IF(VTK_USE_RENDERING)
-  SUBDIRS(ftgl ParseOGLExt)
+  ADD_SUBDIRECTORY(ftgl ParseOGLExt)
 ENDIF(VTK_USE_RENDERING)
 
 IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
