--- a/Utilities/TclTk/resources/CMakeLists.txt
+++ b/Utilities/TclTk/resources/CMakeLists.txt
@@ -3,7 +3,7 @@ IF(VTK_USE_TK)
   SET (TCL_TK_VERSION "${TCL_TK_MAJOR_VERSION}.${TCL_TK_MINOR_VERSION}")
   IF("${VTK_TK_RESOURCES_DIR}" MATCHES 
      "${CMAKE_CURRENT_SOURCE_DIR}/tk${TCL_TK_VERSION}")
-     SUBDIRS(tk${TCL_TK_VERSION})
+     ADD_SUBDIRECTORY(tk${TCL_TK_VERSION})
   ENDIF("${VTK_TK_RESOURCES_DIR}" MATCHES 
         "${CMAKE_CURRENT_SOURCE_DIR}/tk${TCL_TK_VERSION}")
 ENDIF(VTK_USE_TK)
