--- a/VolumeRendering/Testing/CMakeLists.txt
+++ b/VolumeRendering/Testing/CMakeLists.txt
@@ -1,11 +1,11 @@
-SUBDIRS(Cxx)
+ADD_SUBDIRECTORY(Cxx)
 
 IF (VTK_WRAP_TCL)
-  SUBDIRS(Tcl)
+  ADD_SUBDIRECTORY(Tcl)
 ENDIF (VTK_WRAP_TCL)
 
 IF (VTK_WRAP_PYTHON)
-  SUBDIRS(Python)
+  ADD_SUBDIRECTORY(Python)
 ENDIF (VTK_WRAP_PYTHON)
 
 IF(PYTHON_EXECUTABLE)
