--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -66,7 +66,8 @@ IF(VTK_USE_PARALLEL)
 ENDIF(VTK_USE_PARALLEL)
 
 IF(VTK_USE_RENDERING)
-  ADD_SUBDIRECTORY(ftgl ParseOGLExt)
+  ADD_SUBDIRECTORY(ftgl)
+  ADD_SUBDIRECTORY(ParseOGLExt)
 ENDIF(VTK_USE_RENDERING)
 
 IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
