COMP: Put SIP_INCLUDE_DIR before PYTHON_INCLUDE_PATH.
Just in case more than one sip.h exists on a system, make sure that
the one in SIP_INCLUDE_DIR takes priority over the one inside python's
include path.

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -12,11 +12,12 @@ SET(VTK_PYTHON_CORE_SRCS
   PyVTKSpecialObject.cxx
 )
 
-INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_PATH}")
-
+# SIP directory will be searched before other python dirs
 IF(VTK_WRAP_PYTHON_SIP)
   INCLUDE_DIRECTORIES(${SIP_INCLUDE_DIR})
 ENDIF(VTK_WRAP_PYTHON_SIP)
+
+INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_PATH}")
 
 ADD_LIBRARY(vtkPythonCore ${VTK_PYTHON_CORE_SRCS})
 TARGET_LINK_LIBRARIES(vtkPythonCore vtkCommon)
